# SDSDsim

./: .gitignore  README.md  pyproject.toml
envs/: SDSD-R-plotting-extras.yml  SDSD-dev-extras.yml  SDSD-doc-extras.yml  environment.yml
phytools-resources/: bd-config.yml  plot_trees.R  sdsd-config.yml  sim-tree.sh  sim_full_and_trimmed_tree.py
src/sdsdsim/: __init__.py  argparse_utils.py  ctmc.py  math_utils.py  model.py  node.py  rng_utils.py
src/sdsdsim/cli/: sim_SDSD_trees.py
tests/: test_ctmc.py  test_math_utils.py  test_model.py  test_node.py  test_rng_utils.py
